# streamlit-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: app.py
streamlit_copilot/: cli.py  copilot.py  logging.py
streamlit_copilot/copilot/: __init__.py  metadata.py  model.py
